--- a/index.html
+++ b/index.html
@@ -4,24 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <title>Maternity App</title>
+    <title>MATERNITY</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
-    
-
-
-
-
-
-
-
-
-                    <!-- JavaScript -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-primary ">
+        <div class="container-fluid">
+          <a class="navbar-brand text-white" href="#"> NYMPH MATERNITY </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active text-white" aria-current="page" href="#">HOME</a>
+              </li>
+              <li class="nav-item text-white">
+                <a class="nav-link active text-white" href="register.html.php">REGISTER</a>
+              </li>
+              <li class="nav-item text-white">
+                <a class="nav-link active text-white" href="register.html.php">ABOUT</a>
+              </li>
+              <li class="nav-item text-white">
+                <a class="nav-link active text-white" href="register.html.php">NEWS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <div class="container" style= "margin-top: 150px; width: 650px;">
+        <div class="row justify-content-center">
+            <div class="jumbotron">
+                    <h1 class="display-4">Welcome to Nimph Maternity</h1>
+                    <p class="lead">Please log in our mothers and mothers to be.</p>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg" href="login.html.php" role="button">Go to login here</a>
+                    </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
